# bullyguard-model

./: .dockerignore  .gitignore  Makefile  docker-compose.yaml  pyproject.toml  setup.cfg
.envs/: .mlflow-prod
bullyguard/: __init__.py  generate_final_config.py  run_tasks.py  tests.py
bullyguard/config_schemas/: base_schemas.py  config_schema.py  data_module_schemas.py  transformations_schemas.py
bullyguard/config_schemas/evaluation/: evaluation_lightning_module_schemas.py  evaluation_task_schemas.py  model_selector_schemas.py
bullyguard/config_schemas/experiment/bert/: local_bert.py
bullyguard/config_schemas/infrastructure/: infrastructure_schema.py
bullyguard/config_schemas/models/: adapter_schemas.py  backbone_schemas.py  head_schemas.py  model_schemas.py  transformation_schemas.py
bullyguard/config_schemas/trainer/: trainer_schemas.py
bullyguard/config_schemas/training/: loss_schemas.py  optimizer_schemas.py  scheduler_schemas.py  training_lightning_module_schemas.py  training_task_schemas.py
bullyguard/configs/automatically_generated/: config.yaml
bullyguard/data_modules/: data_modules.py
bullyguard/evaluation/: model_selector.py
bullyguard/evaluation/lightning_modules/: bases.py  binary_text_evaluation.py
bullyguard/evaluation/tasks/: bases.py  common_evaluation_task.py
bullyguard/models/: adapters.py  backbones.py  models.py  transformations.py
bullyguard/models/common/: exporter.py
bullyguard/training/lightning_modules/: bases.py  binary_text_classification.py
bullyguard/training/tasks/: bases.py  common_training_task.py  tar_model_exporting_training_task.py
bullyguard/utils/: config_utils.py  mlflow_utils.py  torch_utils.py
docker/: Dockerfile
docker/scripts/: startup-script.sh
